# registry

./: CLAUDE.md  MANIFEST_SCHEMA.md  PLATFORM_PREINSTALLED.md  README.md  SCHEMA.md  STACK_TEMPLATE.md  index.json  package-lock.json  package.json  registry.json  tsconfig.json
.archive/: ollama.json
.github/workflows/: registry.yml
catalog/agents/: claude.json  ollama.json
catalog/agents/v2/: claude.json  codex.json  copilot.json  gemini.json
catalog/binaries/: chromium.json  docker.json  ffmpeg.json  flyio.json  git.json  httpie.json  imagemagick.json  jq.json  netlify.json  pandoc.json  playwright.json  psql.json  railway.json  rclone.json  ripgrep.json  sqlite.json  supabase.json  tesseract.json  vercel.json  whisper.json  wrangler.json  yq.json  ytdlp.json
catalog/binaries/v2/: chromium.json  docker.json  ffmpeg.json  flyio.json  jq.json  (+20 more)
catalog/prompts/: README.md  brainstorm.md  code-review.md  explain.md  fix-error.md  getting-started.md  organize-files.md  summarize.md  write-email.md
catalog/runtimes/: ollama.json
catalog/stacks/: README.md
catalog/stacks/_archive/anthropic-stack/python/: agent.py  api.py  models.py  pyproject.toml
catalog/tools/: docker.json  ffmpeg.json  git.json  httpie.json  jq.json  pandoc.json  rclone.json  ripgrep.json  vercel.json  whisper.json  yq.json  ytdlp.json
schemas/: package.schema.json
scripts/: build-tarballs.sh  update-manifests.sh
src/: compile.test.ts  compile.ts  extract-schema.test.ts  migrate.ts  resolver.test.ts  resolver.ts  schema.test.ts  validate.ts
src/__snapshots__/: resolver.test.ts.snap
(+261 files in other folders)
