[project]
name = "anthropic-agent-stack"
version = "0.1.0"
description = "Anthropic Agent SDK setup with latest Claude models"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.17",
    "anthropic>=0.40.0",
    "anyio>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
